--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ body {
 }
 
 .service-content_inner {
-  position: absolute;
+  position: static;
   top: 15%;
   left: 20%;
   background: #fff;
