--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 50%;
+  width: 100%;
 }
 .news-content {
   background: #fff;
@@ -316,9 +316,9 @@ body {
 }
 
 .mission-content {
-  padding: 10% 0 10% 20%;
+  padding: 10% 10%;
   box-sizing: border-box;
-  width: 70%;
+  width: 100%;
 }
 
 .mission_title,
@@ -367,7 +367,7 @@ body {
 }
 
 .service-content_inner {
-  position: static;
+  position: static;　
   top: 15%;
   left: 20%;
   background: #fff;
